// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should match the snapshot 1`] = `
<styled.div
  gridGap="10px"
  padding="10px"
>
  <styled.div
    colXS={6}
    horizontalAlign="flex-start"
    verticalAlign="flex-start"
  >
    <Heading
      component="h4"
    />
  </styled.div>
  <styled.div
    center={true}
    colXS={6}
    horizontalAlign="flex-start"
    verticalAlign="flex-start"
  >
    <styled.label>
      <styled.input
        onChange={[Function]}
        type="checkbox"
      />
      <styled.span />
    </styled.label>
  </styled.div>
</styled.div>
`;

exports[`Checkbox should match the snapshot when checked 1`] = `
<styled.div
  gridGap="10px"
  padding="10px"
>
  <styled.div
    colXS={6}
    horizontalAlign="flex-start"
    verticalAlign="flex-start"
  >
    <Heading
      component="h4"
    />
  </styled.div>
  <styled.div
    center={true}
    colXS={6}
    horizontalAlign="flex-start"
    verticalAlign="flex-start"
  >
    <styled.label>
      <styled.input
        checked={true}
        onChange={[Function]}
        type="checkbox"
      />
      <styled.span />
    </styled.label>
  </styled.div>
</styled.div>
`;

exports[`Checkbox should match the snapshot with label 1`] = `
<styled.div
  gridGap="10px"
  padding="10px"
>
  <styled.div
    colXS={6}
    horizontalAlign="flex-start"
    verticalAlign="flex-start"
  >
    <Heading
      component="h4"
      label="Mock"
    />
  </styled.div>
  <styled.div
    center={true}
    colXS={6}
    horizontalAlign="flex-start"
    verticalAlign="flex-start"
  >
    <styled.label>
      <styled.input
        onChange={[Function]}
        type="checkbox"
      />
      <styled.span />
    </styled.label>
  </styled.div>
</styled.div>
`;
